--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <div class="bg-container">
         <h1 class="hello-heading">Hello</h1>
-        <h1 class="name-heading">Jane Doe</h1>
+        <h1 class="name-heading">Welcome !</h1>
         <div class="bottom-container">
             <h1 class="heading">Bookmark Your Favorite Sites</h1>
 
